--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.snapchatcloneproject">
+    package="com.zappycode.snapchat">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -11,9 +11,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChooseUserActivity"></activity>
-        <activity android:name=".CreateSnapActivity" />
-        <activity android:name=".SnapsActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SnapsActivity" />
+        <activity android:name=".CreateSnapActivity" />
+        <activity android:name=".ChooseUserActivity" />
+        <activity android:name=".ViewSnapActivity"></activity>
     </application>
 
 </manifest>
